--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.19.2",
     "@nuxtjs/cloudinary": "^4.0.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/nuxt": "^0.1.3",
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.3.0",
     "nuxt": "^3.14.1592",
     "nuxt-auth-utils": "^0.5.5",
+    "nuxt-mongoose": "^1.0.6",
     "prisma": "^5.22.0",
     "pusher": "^5.2.0",
     "pusher-js": "8.4.0-rc2",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.22.0"
   }
 }
