--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 DATABASE_URL=""
-
+# DATABASE_URL="mongodb://localhost:27017/chat-app"
 #Pusher
 NUXT_PUBLIC_PUSHER_APP_KEY=""
 PUSHER_APP_ID=""
 PUSHER_SECRET=""
-
-
+=
+=
 #NUXT_AUTH_UTILS
 NUXT_OAUTH_GITHUB_CLIENT_ID=""
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=""
 NUXT_SESSION_PASSWORD=""
-
+=
 #Cloudinary
 NUXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
 NUXT_PUBLIC_UPLOAD_PRESET=""
