finish pusher setup

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,8 @@ DATABASE_URL=""
 # DATABASE_URL="mongodb://localhost:27017/chat-app"
 #Pusher
 NUXT_PUBLIC_PUSHER_APP_KEY=""
-PUSHER_APP_ID=""
-PUSHER_SECRET=""
-=
+NUXT_PUSHER_APP_ID=
+NUXT_PUSHER_SECRET=
 =
 #NUXT_AUTH_UTILS
 NUXT_OAUTH_GITHUB_CLIENT_ID=""
